added modules to parent project to control build order